--- a/index.html
+++ b/index.html
@@ -62,8 +62,13 @@
 
         <img src="Photos/Instagram_icon.png" alt="" width="20"> 
         <a href="https://www.instagram.com/ibrahimh_ylmz/" target="_blank" style="color:white;">Instagram</a>
-
-        <hr><br><br>
+        <br>
+        <img src="Photos/Github_Logo.png" alt="" width="20">
+        <a href="https://github.com/ibrahimhyilmaz" target="_blank" style="color:white;">Github</a>
+        <br>
+        <img src="Photos/LinkedIn_logo.png" alt="" width="20">
+        <a href="https://www.linkedin.com/in/ibrahim-yılmaz-141300387/" target="_blank" style="color:white;">Github</a>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
         <audio src="Sounds/Naruto Main Theme.mp3" controls autoplay></audio>
     </div>
